Update CamSniff package and enhance web interface
- Updated debian/control to use debhelper-compat and increased Standards-Version to 4.7.0.
- Changed dependencies from avahi-discover to avahi-utils and added python3-flask.
- Revised package description for clarity and removed redundant features.
- Fixed copyright file formatting issues.
- Streamlined post-install and post-remove scripts for better readability.
- Added new source format file for native packaging.
- Enhanced env_setup.sh with additional configuration options for IoT enumeration and scanning.
- Updated install_deps.sh to include new dependencies and improved pip installation.
- Introduced iot_enumerate.sh for IoT device enumeration and discovery.
- Refined scan_analyze.sh to improve logging and analysis features.
- Implemented a new Flask web application (web/app.py) for real-time camera status and reporting.
- Created webui.sh to manage the web application environment and dependencies.
- Added a new directory structure for web output and reports.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,21 @@
-# Build-generated debian artifacts (keep debian/ source directory)
-*.deb
-build-deb.sh
+
+# Debian packaging outputs / build artifacts (generated)
+debian/camsniff/
+debian/.debhelper/generated/
+debian/files
+debian/debhelper-build-stamp
+debian/*.substvars
+
+# Virtualenv / local deps
 .camvenv/
 .deps_installed
-camcfg.json
-plugins/
 
 # Build artifacts
-camsniff
+*.deb
+build-deb.sh
 /build/
 /dist/
-
+output/*
 # Temporary and cache files
 /tmp/
 *.tmp
@@ -18,4 +23,3 @@ camsniff
 *.cache
 .github
 paused.conf
-debian/*
