Update README, fix copyright notice, and modify package dependencies

--- a/debian/control
+++ b/debian/control
@@ -36,7 +36,7 @@ Depends: ${misc:Depends},
          rtmpdump,
          build-essential,
          cmake,
-         pkg-config,
+         pkgconf,
          autoconf,
          automake,
          libtool,
