Remove unused shebang line from CamSniff script

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@ tests/output/*
 # Build wrapper artifacts
 camsniff
 CamSniff
-camcfg.json
+*camcfg.json*
+tests/data/*
 
 # Virtualenv / local deps
 .debhelper/
