--- a/debian/camsniff.desktop
+++ b/debian/camsniff.desktop
@@ -1,8 +1,12 @@
 [Desktop Entry]
 Type=Application
+Version=1.0.4-1
 Name=CamSniff
-Comment=Camera Reconnaissance Tool
-Exec=camsniff
+GenericName=Camera Recon Tool
+Comment=Discover and analyze IP cameras
+Exec=pkexec /usr/bin/camsniff -a
 Icon=camsniff
-Categories=Network;Security;
 Terminal=true
+Categories=Network;Security;Utility;
+Keywords=camera;security;network;rtsp;scan;
+X-Kali-Package=camsniff
