--- a/debian/camsniff.desktop
+++ b/debian/camsniff.desktop
@@ -1,10 +1,12 @@
 [Desktop Entry]
 Name=CamSniff
 Comment=Automated IP camera reconnaissance toolkit
+GenericName=IP Camera Reconnaissance Tool
 Exec=camsniff
 TryExec=camsniff
 Terminal=true
 Type=Application
-Categories=Network;Security;Utility;
-Keywords=Security;Camera;RTSP;Scan;
+Categories=System;Security;
+Keywords=Security;Camera;RTSP;Scan;Network;
+StartupNotify=false
 Icon=camsniff
