--- a/debian/camsniff.desktop
+++ b/debian/camsniff.desktop
@@ -2,11 +2,11 @@
 Name=CamSniff
 Comment=Automated IP camera reconnaissance toolkit
 GenericName=IP Camera Reconnaissance Tool
-Exec=camsniff
+Exec=gnome-terminal -- sudo camsniff --help
 TryExec=camsniff
 Terminal=true
 Type=Application
 Categories=System;Security;
 Keywords=Security;Camera;RTSP;Scan;Network;
 StartupNotify=false
-Icon=camsniff
+Icon=/usr/share/icons/hicolor/256x256/apps/camsniff-256.png
