--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ debian/debhelper-build-stamp
 debian/files
 debian/camsniff/*
 scripts/venv/*
+debian/patches/*
+debian/source/options
+debian/tests/*
+debian/upstream/*
+venv/*
