--- a/debian/control
+++ b/debian/control
@@ -1,23 +1,24 @@
 Source: camsniff
-Section: net
+Section: utils
 Priority: optional
 Maintainer: John Hauger Mitander <john@on1.no>
 Build-Depends: debhelper-compat (= 13)
 Standards-Version: 4.7.0
-Homepage: https://github.com/John0n1/CamSniff
-Vcs-Git: https://github.com/John0n1/CamSniff.git
-Vcs-Browser: https://github.com/John0n1/CamSniff
 Rules-Requires-Root: no
+Homepage: https://github.com/John0n1/camsniff
+Vcs-Git: https://github.com/John0n1/camsniff.git
+Vcs-Browser: https://github.com/John0n1/camsniff
 
 Package: camsniff
-Architecture: all
-Depends: ${misc:Depends}, python3, curl, jq, ffmpeg, tshark, avahi-utils, iproute2, nmap
-Recommends: masscan, chafa
+Architecture: any
 Multi-Arch: foreign
-Description: Automated IP camera reconnaissance and credential audit toolkit
- CamSniff orchestrates multi-stage discovery of IP cameras on a local
- network. It coordinates nmap RTSP enumeration, optional masscan sweeps,
- Avahi/mDNS discovery, and tshark traffic captures, then correlates the
- findings with a vendor knowledge base. Finally, CamSniff attempts HTTP
- snapshots and RTSP still captures using curated default credentials to
- surface misconfigured surveillance systems.
+Depends: ${misc:Depends}, python3, python3-venv, nmap,
+ masscan, tshark, avahi-daemon, avahi-utils, libpcap0.8, libchafa0, chafa,
+ ffmpeg, curl, jq
+Recommends: python3-dev, aircrack-ng, airmon-ng
+Description: Mode-aware reconnaissance toolkit for IP cameras
+ CamSniff is a mode-aware, data-driven reconnaissance toolkit focused on
+ discovering IP cameras and related streaming or telemetry endpoints on
+ local networks. It coordinates active scanning (Nmap with optional
+ Masscan), passive discovery (Avahi/mDNS), and targeted packet captures
+ (TShark) to build unified host profiles.
