--- a/debian/camsniff.desktop
+++ b/debian/camsniff.desktop
@@ -2,10 +2,10 @@
 Name=CamSniff
 Comment=Automated IP camera reconnaissance toolkit
 GenericName=IP Camera Reconnaissance Tool
-Exec=gnome-terminal -- bash -c 'sudo camsniff --help; read -p "Press Enter to close..."'
-Terminal=false  
+Exec=sudo camsniff --help
+Terminal=true
 Type=Application
 Categories=System;Security;
 Keywords=Security;Camera;RTSP;Scan;Network;
 StartupNotify=true
-Icon=/usr/share/icons/hicolor/256x256/apps/camsniff-256.png
+Icon=camsniff-256
