feat: Enhance camera reconnaissance toolkit with new features and scripts
- Updated mode-config.sh to include new configuration options for ONVIF probing, SSDP, HTTP metadata, and follow-up service scans based on selected modes.
- Added onvif_device_info.py to parse ONVIF GetDeviceInformation SOAP responses and extract device details.
- Introduced port-profiles.sh to define various port profiles for Nmap and Masscan, along with suggested RTSP brute-force thread counts.
- Created profile_resolver.py to resolve camera/profile hints based on discovery artifacts, including catalog loading and matching logic.
- Developed rtsp_stream_summary.py to summarize ffprobe output for RTSP streams.
- Implemented ssdp_probe.py for performing multicast SSDP discovery sweeps and capturing responses.
- Added ui-banner.sh for rendering a user interface banner with information about the toolkit and its usage.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 build.log
+.venv/*
+
 dev/results/*
 !dev/results/.gitkeep
+scripts/venv/*
 scripts/paused.conf
 debian/.debhelper/*
 debian/debhelper-build-stamp
